2025-11-30  Karl Berry  <karl@freefriends.org>

	* configure.ac (XETEX_MACOSX): check for enable_xetex=yes
	as well as for ApplicationServices. Stemmed from original report at
	https://tug.org/pipermail/tex-k/2025-November/004226.html.
	* configure: regenerate.

2025-11-11  Karl Berry  <karl@freefriends.org>

	* configure.ac (KPSE_HARFBUZZ_FLAGS): enable if hitex is enabled.
	Report from balducci,
	https://tug.org/pipermail/tex-k/2025-November/004229.html.

2025-11-10  Karl Berry  <karl@freefriends.org>

	* PROJECTS: typo.

2025-11-05  Karl Berry  <karl@freefriends.org>

	* ac/web2c.ac (kpse_tex_progs) <hitex>: now depends on harfbuzz.
	* configure,
	* Makefile.in: reautoconf.
	However, undefined reference to `hb_ft_face_create_referenced' remains.
	https://tug.org/pipermail/tlbuild/2025q4/005883.html

2025-10-02  Karl Berry  <karl@freefriends.org>

	* bibtex.web: version 0.99e, with fixes for weave (only).
	- No more active `E (reported by Andreas Scherer and Norman Gray).
	- Use \TeX in \BibTeX and \LaTeX definitions.
	- Sort names of the sections better (from Andreas).
	- Remove unused \titlepage macro.
	- Assorted typos.
	* bibtex.ch,
	* uptexdir/upbibtex.ch: adapt.

2025-09-30  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi (tex invocation): try to clarify
	command-line/first-line processing, including input filename
	expansion. Original report from Duncan Murdoch,
	https://tug.org/pipermail/tex-live/2025-August/051650.html.
	Also, use @code{TRIP} since that's that Knuth does (noticed by Max
	Chernoff).
	(\input filename caveats): mention that Windows reserves CON[.tex],
	etc. From Max.
	
	(Formats) <amstex>: no longer AMS's preferred system.
	<slitex>: mention ltx-talk.
	Other updates in passing.

2025-08-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ac/web2c.ac (ptex), Makefile.am, uptexdir/am/uptex.am,
	euptexdir/am/euptex.am, ptexdir/*, texmfmem.h, texmfmp-help.h:
	Remove ptex and ptexdir/.

2025-07-27  Andreas Scherer  <https://ascherer.github.io>
